# BoltzmannMachine

./: .gitignore  README.md
BMCarmona/: CMakeLists.txt  input.json  t.py
BMCarmona/Results/: RandomLaser.json  err_RandomLaser.csv
BMCarmona/Scripts/: Part1.sh  filter_data.py  input.json
BMCarmona/src/: CallableHelper.h  benchmark.cpp  benchmark.h  energy.cpp  energy.h  exact_solution.h  experimental_means.cpp  forwardmethod.cpp  logger.h
BMCarmona/tests/: test_energy.cpp  test_exact_solution.cpp  test_experimental_means.cpp  test_forwardmethod.cpp  test_metropolis.cpp  test_network.cpp
BMProgramCarmona/: CMakeLists.txt  README.md  input.json
BMProgramCarmona/Results/: RandomLaser.json  err_RandomLaser.csv  err_sampleN20.txt  err_sampleN20_j_min_4e-05_h_min_4.2e-05_t_eq_3000_exact.txt  err_sampleN20_j_min_8.1e-05_h_min_3.4e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.1e-05_h_min_3.6e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.3e-05_h_min_3.6e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.3e-05_h_min_3.8e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.5e-05_h_min_3.4e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.7e-05_h_min_3.8e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.7e-05_h_min_4.2e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.7e-05_h_min_4e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.9e-05_h_min_4.2e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.9e-05_h_min_4e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_9.1e-05_h_min_3.8e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_9.1e-05_h_min_4e-05_t_eq_3000_metropolis.txt  err_sampleN30.csv  err_sampleN30.txt  sampleN20.json
BMProgramCarmona/Results_Metropolis/: err_sampleN20_j_min_8.7e-05_h_min_3.8e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.7e-05_h_min_4.2e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.7e-05_h_min_4e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.9e-05_h_min_3.8e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.9e-05_h_min_4.2e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_8.9e-05_h_min_4e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_9.1e-05_h_min_3.8e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_9.1e-05_h_min_4.2e-05_t_eq_3000_metropolis.txt  err_sampleN20_j_min_9.1e-05_h_min_4e-05_t_eq_3000_metropolis.txt
BMProgramCarmona/Scripts/: ProcessingData  ProcessingData.cpp  multithread_pc.sh
BMProgramCarmona/jupyter/: err_observations.ipynb  teste.ipynb
BMProgramCarmona/jupyter/src/: err_obs_funcs.py
BMProgramCarmona/python/: err_observations.py  gen_inputs_json.py  input_j_min_9.1e-05_h_min_4.2e-05.json  teste.ipynb
BMProgramCarmona/python/src/: err_observations_functions.py  gen_inputs_functions.py
BMProgramCarmona/src/: create_folders.cpp  create_folders.h  energy.cpp  exact_solution.cpp  experimental_means.cpp  experimental_means.h  forwardmethod.h  initial_guess.cpp  initial_guess.h  main.cpp  metropolis.cpp  metropolis.h  network.cpp  network.h  nr3.h  read_input_json.cpp  read_input_json.h  read_json.cpp  read_json.h  salvardados.cpp  write_json.cpp  write_json.h
BM_Program/Scripts/: BMfinal  BMfinal.cpp  CreateFolders  Part1_single.sh  ProcessingData  (+13 more)
BM_Program_json/: CMakeLists.txt  create_folders_test  input_2  parallel.sh
BM_Program_json/Scripts/: BMfinal  BMfinal.cpp  CreateFolders  Part1_single.sh  ProcessingData  ProcessingData.cpp  SpecificHeat  SpecificHeat.cpp  compile.sh  create_folders.cpp  input_multithread.txt  main_single.sh  parallel.sh  properties.cpp  teste_json.cpp
BM_Program_json/Scripts/include/: LUdcmp.h  create_folders.h  exp_means.h  read_json.h  write_json.h
BM_Program_json/Scripts/src/: create_folders.cpp  create_folders.hpp  exp_means.cpp  exp_means.hpp  json_functions.cpp  json_functions.hpp  main.cpp  network.h  read_json.hpp  write_json.hpp
BM_Program_json/broken/: nr3.h  nr3_1.h  nr3_2.h  nr3_3.h  nr3_4.h  nr3_5.h
BM_Program_json/jupyter/: comparative_analise.ipynb  correlation_samples.ipynb  correlation_samples_bet_spins.ipynb  erro_analise.ipynb  erro_analysis.ipynb  parallel.ipynb  read_json.ipynb  spec_heat_analysis.ipynb  spin_analysis.ipynb
BM_Program_json/jupyter/src/: comp_analises.py  comp_analysis.py  correlations_samples.py  err_analises.py  err_analysis.py  multithread_functions.py  spec_heat_analysis.py
BM_Program_json/presentation/materials/: c000_Bubl.eps
BM_Program_json/python/: bin_data  exp_calculate  fluids_codes.py
BM_Program_json/python/src/: directories_fluids.py
BM_Program_json/samples_test_periodic/: c000_Spin.eps  c001_Spin.eps
BM_Program_json/src/: LUdcmp.h  clean_data.cpp  create_folders.cpp  create_folders.h  create_folders.hpp  exp_means.cpp  exp_means.h  exp_means.hpp  forwardmethod.h  json_functions.cpp  json_functions.h  main.cpp  network.cpp  single_main_test.cpp  teste_create.cpp  teste_create_exp_mean.cpp  teste_exp_mean.cpp
BM_Program_json/src_2/: create_folders.h  forwardmethod.h  json_functions.h  main.cpp  network.h  nr3.h  single_main_test.cpp  teste_create.cpp  teste_exp_mean.cpp
BM_Program_json/src_b/: InverseMethod.h  exp_means.cpp  exp_means.h  forwardmethod.h  json_functions.cpp  json_functions.h  main.cpp  nr3.h  teste_create.cpp
BM_Program_json/testes/: clean  create_folders_executable  create_folders_test  create_test_executable  single_main_test  single_main_test_executable  teste_create  teste_mean_test
CUDA/: parallel_tempering_cuda.cu  parallel_tempering_cuda_host.cu
MyProject/: CMakeLists.txt  tests.cpp
MyProject/src/: add.cpp  add.h  banchmark.cpp  banchmark.hpp  dif.cpp  dif.h  main.cpp  my_code.cpp  my_code.h
MyProject/tests/: test_add.cpp  test_dif.cpp  test_my_code.cpp
jupyter/: comparative_analysis.ipynb  erro_analysis.ipynb  syntetic_data_tests.ipynb  time_method_5
python/: parallel.py
scripts/: .Rhistory  BMfinal.cpp  BMfinal_jr.cpp  ProcessingData.cpp  SpecificHeat.cpp  clean_data.cpp  create_folders.cpp  gen_data_tests.cpp  synthetic_data.cpp  tests.cpp
shells/: BoltmannMachine.sh  auto_complete.sh  compile.sh  generate_data.sh  parallel.sh  syntetic_tests.sh
(+98 files in other folders)
